samples/_failures_safe/1761414610_ad42e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a39fee3.c: In function ‘main’:
./samples/SAFE/__tmp_5a39fee3.c:135:7: error: expected ‘;’ at end of input
  135 |     op
      |       ^
      |       ;
./samples/SAFE/__tmp_5a39fee3.c:135:5: error: expected declaration or statement at end of input
  135 |     op
      |     ^~
